--- a/_posts/20223-05-01-Java-101.md
+++ b/_posts/20223-05-01-Java-101.md
@@ -1,54 +1,63 @@
 ---
 layout: post
-title: Javascript 101 
-subtitle: Path 1 - The basic
-cover-img: assets/img/javascript/basic/backgroud.png
-thumbnail-img: assets/img/javascript/basic/backgroud.png
-share-img:  assets/img/javascript/basic/backgroud.png
-tags: [javascipt, basic]
+title: Java 101 
+subtitle: Path 1 - Basic
+cover-img: assets/img/docker-kubernetes/docker/backgroud.png
+thumbnail-img: assets/img/docker-kubernetes/docker/backgroud.png
+share-img: assets/img/docker-kubernetes/docker/backgroud.png
+tags: [java]
 ---
 
-This post is my learning note about some concept in javascript.
+This post is my learning note about some basic concept in java. 
 ![--](../assets/img/utils/rainbow.png)
 
 ## Table of Contents
 - [Table of Contents](#table-of-contents)
-- [Data type](#data-type)
+- [Primitive Types](#primitive-types)
+- [Built-in Classes](#built-in-classes)
+- [Docker Run in Detail](#docker-run-in-detail)
+  - [Create and run a container from an mage](#create-and-run-a-container-from-an-mage)
+  - [Listing running container](#listing-running-container)
+  - [Restarting stopped container](#restarting-stopped-container)
+  - [Removing stopped container](#removing-stopped-container)
+  - [Retriveing log output](#retriveing-log-output)
+- [Reinforcement learning](#reinforcement-learning)
+- [Common algorithms](#common-algorithms)
+- [Evaluation metrics](#evaluation-metrics)
+- [Resource](#resource)
 
 ![--](../assets/img/utils/rainbow.png)
 
-## Data type
-There are two kinds of data:
-- **Primative** (e.g: string, number, boolean, undefined, null).
-  - number: combine int, long, double. 
-  - undefined + null: 
-    ![image](../assets/img/javascript/basic/null-undefined.png)
-- **Objects** (e.g: document & friend).
-
+## Primitive Types
+ - **Number**: byte(8) > short(16) > int(32) > long(64)
+ - **Floating Point Number**: float(32) > double(64)
+ - **Char**: 16 bits, one character, ''
+ - **Boolean**: should start varibale with prefix 'is', 'has' (isMarried, hasChildren)
+## Built-in Classes
+ - **String**:
 ![--](../assets/img/utils/rainbow.png)
 
-<!-- ## Supervised learning
+## Docker Run in Detail
 
-Supervised learning is used when we have a labeled dataset and want to predict the label of new, unseen data points. Some common supervised learning algorithms include:
+### Create and run a container from an mage
+`docker run <image_name> command!`
+  - **run**: try to create and run the container
+  - **command!**: Default overide comand
+    - `docker run busybox ls` or `docker run busybox echo hi`
+### Listing running container
+`docker ps -a!`
+  - **ps**: list all *running* container
+  - **-a**: listting all *created* container (--all)
+### Restarting stopped container
+`docker start -a!`
+  - **-a**: 
+### Removing stopped container
+`docker syystem prune`
 
-- Linear regression
-- Logistic regression
-- Decision trees
-- Random forests
-- Support vector machines
+### Retriveing log output
+`docker logs <container_id>`
 
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
-## Unsupervised learning
-
-Unsupervised learning is used when we have an unlabeled dataset and want to find patterns or structure within the data. Some common unsupervised learning algorithms include:
-
-- K-means clustering
-- Hierarchical clustering
-- Principal component analysis (PCA)
-- Singular value decomposition (SVD)
-
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
+![--](../assets/img/utils/rainbow.png) 
 
 ## Reinforcement learning
 
