--- a/_posts/2023-03-20-docker-101.md
+++ b/_posts/2023-03-20-docker-101.md
@@ -9,15 +9,24 @@ tags: [docker]
 ---
 
 This post is my learning note about some concept in docker. 
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
+![--](../assets/img/utils/rainbow.png)
 
 ## Table of Contents
 - [Table of Contents](#table-of-contents)
 - [Dive Into Docker](#dive-into-docker)
+- [Docker Run in Detail](#docker-run-in-detail)
+  - [Comand](#comand)
+  - [Note](#note)
+- [Building Custom Images](#building-custom-images)
+  - [Create a dockerfile](#create-a-dockerfile)
+  - [Structure of dockerfile](#structure-of-dockerfile)
+  - [Note](#note-1)
+- [Reinforcement learning](#reinforcement-learning)
+- [Common algorithms](#common-algorithms)
+- [Evaluation metrics](#evaluation-metrics)
+- [Resource](#resource)
 
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
+![--](../assets/img/utils/rainbow.png)
 
 ## Dive Into Docker
 - **Why:** Easy to install and run sofware without worrying about setup or dependencies.
@@ -26,30 +35,47 @@ This post is my learning note about some concept in docker.
   - *Image:* Snapshot of file systems to run a program with some start up comands.
   - *Container:* Instance of an image for running a program.
 
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
+![--](../assets/img/utils/rainbow.png)
 
-<!-- ## Supervised learning
+## Docker Run in Detail
 
-Supervised learning is used when we have a labeled dataset and want to predict the label of new, unseen data points. Some common supervised learning algorithms include:
+### Comand
 
-- Linear regression
-- Logistic regression
-- Decision trees
-- Random forests
-- Support vector machines
+| What | Comand | Description |
+|------|--------|-------------|
+| Create and run a container from an image | `docker run <image_name> command!` | **run**: try to create and run the container <br /> **command!**: Default overide comand <br /> `docker run busybox ls` or `docker run busybox echo hi` |
+| Listing running container | `docker ps -a!` | **ps**: list all *running* container  <br />  **-a**: listting all *created* container (--all) |
+| Restarting stopped container | `docker start -a!` | **-a**: attach, allow to see output of container in terminal |
+| Removing stopped container | `docker system prune` | |
+| Retrieving log output | `docker logs <container_id>` | |
+| Execute an additional command in a container | `docker exec -it <container id> <command>` |  **-it**: allow us to provide input to the container and output from container to screen  <br />  **command**: command to execute |
 
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
+### Note
+  - Docker container is isolate from each others.
 
-## Unsupervised learning
+![--](../assets/img/utils/rainbow.png)
 
-Unsupervised learning is used when we have an unlabeled dataset and want to find patterns or structure within the data. Some common unsupervised learning algorithms include:
+## Building Custom Images
 
-- K-means clustering
-- Hierarchical clustering
-- Principal component analysis (PCA)
-- Singular value decomposition (SVD)
+### Create a dockerfile
+ ![image](../assets/img/docker-kubernetes/docker/3/1.png)
 
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
+### Structure of dockerfile
+
+`docker build -t <tag_name> <build context>`
+  - **-t <tag_name>**: follow convention : `dockerId/projectName:version` (-t vanduong/redis:latest)
+  - **build context**: file or folder using in build process
+
+| What | Description | Examples |
+|------|-------------|----------|
+| FROM | Spcecify a base image | FROM alpine |
+| RUN | Run comands to install additional program | RUN apk add --update redis |
+| CMD | Comand to run on startup | CMD [ "redis-server" ]
+
+### Note
+
+
+![--](../assets/img/utils/rainbow.png) 
 
 ## Reinforcement learning
 
