--- a/_posts/2023-03-20-docker-101.md
+++ b/_posts/2023-03-20-docker-101.md
@@ -20,6 +20,7 @@ This post is my learning note about some concept in docker.
 - [Building Custom Images](#building-custom-images)
   - [Create a dockerfile](#create-a-dockerfile)
   - [Structure of dockerfile](#structure-of-dockerfile)
+  - [Note](#note-1)
 
 ![--](../assets/img/utils/rainbow.png)
 
@@ -39,6 +40,7 @@ This post is my learning note about some concept in docker.
 | What | Comand | Description |
 |------|--------|-------------|
 | Create and run a container from an image | `docker run <image_name> command!` | **run**: try to create and run the container <br /> **command!**: Default overide comand <br /> `docker run busybox ls` or `docker run busybox echo hi` |
+| Running a container with port mapping (outside to connect to container) | `docker run -p <port_from_request>:<port_to_container> <image_name>` |  **p**: port mapping |
 | Listing running container | `docker ps -a!` | **ps**: list all *running* container  <br />  **-a**: listting all *created* container (--all) |
 | Restarting stopped container | `docker start -a!` | **-a**: attach, allow to see output of container in terminal |
 | Removing stopped container | `docker system prune` | |
@@ -58,12 +60,20 @@ This post is my learning note about some concept in docker.
 ### Structure of dockerfile
 
 `docker build -t <tag_name> <build context>`
-  - **build context**: file or folder using in build process
+  - **-t <tag_name>**: follow convention : `dockerId/projectName:version` (-t vanduong/redis:latest)
+  - **build context**: file or folder using in build proces
 
 | What | Description | Examples |
 |------|-------------|----------|
 | FROM | Spcecify a base image | FROM alpine |
 | RUN | Run comands to install additional program | RUN apk add --update redis |
-| CMD | Comand to run on startup | CMD [ "redis-server" ]
+| CMD | Comand to run on startup | CMD [ "redis-server" ] |
+| COPY | Copy files to container | COPY ./ ./ |
+| WORDIR | Any following command will be executed relative to this path in the container | WORKDIR /usr/app |
+
+### Note
+  - FROM keywork following by <image_name>:<version> (node:14-alpine)
+  - COPY keyword should use cache for dependencies when building following this format for minimizing time consumption when building images: 
+  `COPY <depencies_files>` > `RUN <install>` > `COPY <changeable_files (source code)>`
 
 ![--](../assets/img/utils/rainbow.png) 
