--- a/_posts/2023-03-20-docker-101.md
+++ b/_posts/2023-03-20-docker-101.md
@@ -60,7 +60,7 @@ This post is my learning note about some concept in docker.
 ### Structure of dockerfile
 
 `docker build -t <tag_name> <build context>`
-  - **-t <tag_name>**: follow convention : `dockerId/projectName:version` (-t vanduong/redis:latest)
+  - **-tag_name**: follow convention : `dockerId/projectName:version` (-t vanduong/redis:latest)
   - **build context**: file or folder using in build proces
 
 | What | Description | Examples |
@@ -72,7 +72,7 @@ This post is my learning note about some concept in docker.
 | WORDIR | Any following command will be executed relative to this path in the container | WORKDIR /usr/app |
 
 ### Note
-  - FROM keywork following by <image_name>:<version> (node:14-alpine)
+  - FROM keywork following by  `<image_name>`:`<version>` (node:14-alpine)
   - COPY keyword should use cache for dependencies when building following this format for minimizing time consumption when building images: 
   `COPY <depencies_files>` > `RUN <install>` > `COPY <changeable_files (source code)>`
 
