--- a/_posts/2023-03-20-docker-101.md
+++ b/_posts/2023-03-20-docker-101.md
@@ -60,7 +60,7 @@ This post is my learning note about some concept in docker.
 ### Structure of dockerfile
 
 `docker build -t <tag_name> <build context>`
-  - **-tag_name**: follow convention : `dockerId/projectName:version` (-t vanduong/redis:latest)
+  - **-tag_name**: follow convention `dockerId/projectName:version` (-t vanduong/redis:latest)
   - **build context**: file or folder using in build proces
 
 | What | Description | Examples |
