--- a/_posts/2023-03-20-docker-101.md
+++ b/_posts/2023-03-20-docker-101.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Docker and kubernetes 101 
+title: Docker and Kubernetes 101 
 subtitle: Path 1 - Docker
 cover-img: assets/img/docker-kubernetes/docker/background.png
 thumbnail-img: assets/img/docker-kubernetes/docker/background.png
@@ -8,34 +8,34 @@ share-img: assets/img/docker-kubernetes/docker/background.png
 tags: [docker]
 ---
 
-This post is my learning note about some concept in docker. 
+This post is my learning note about some concepts in docker. 
 ![--](../assets/img/utils/rainbow.png)
 
 ## Table of Contents
 - [Table of Contents](#table-of-contents)
 - [Dive Into Docker](#dive-into-docker)
 - [Docker Run in Detail](#docker-run-in-detail)
-  - [Comand](#comand)
+  - [Command](#command)
   - [Note](#note)
 - [Building Custom Images](#building-custom-images)
-  - [Create a dockerfile](#create-a-dockerfile)
+  - [Create a docker file](#create-a-dockerfile)
   - [Structure of dockerfile](#structure-of-dockerfile)
   - [Note](#note-1)
 
 ![--](../assets/img/utils/rainbow.png)
 
 ## Dive Into Docker
-- **Why:** Easy to install and run sofware without worrying about setup or dependencies.
+- **Why:** Easy to install and run software without worrying about setup or dependencies.
 - **What:** An ecosystem around creating and running containers.
 - **Core concepts:**
-  - *Image:* Snapshot of file systems to run a program with some start up comands.
+  - *Image:* Snapshot of file systems to run a program with some start-up commands.
   - *Container:* Instance of an image for running a program.
 
 ![--](../assets/img/utils/rainbow.png)
 
 ## Docker Run in Detail
 
-### Comand
+### Command
 
 | What | Comand | Description |
 |------|--------|-------------|
@@ -48,7 +48,7 @@ This post is my learning note about some concept in docker.
 | Execute an additional command in a container | `docker exec -it <container id> <command>` |  **-it**: allow us to provide input to the container and output from container to screen  <br />  **command**: command to execute |
 
 ### Note
-  - Docker container is isolate from each others.
+  - Docker container is isolated from each other.
 
 ![--](../assets/img/utils/rainbow.png)
 
@@ -61,7 +61,7 @@ This post is my learning note about some concept in docker.
 
 `docker build -t <tag_name> <build context>`
   - **-tag_name**: follow convention `dockerId/projectName:version` (-t vanduong/redis:latest)
-  - **build context**: file or folder using in build proces
+  - **build context**: file or folder using the build process
 
 | What | Description | Examples |
 |------|-------------|----------|
