--- a/_posts/2023-03-19-Javascript-101.md
+++ b/_posts/2023-03-19-Javascript-101.md
@@ -8,7 +8,7 @@ share-img:  assets/img/javascript/basic/backgroud.png
 tags: [javascipt, basic]
 ---
 
-This post is my learning note about some concept in javascript.
+This post is my learning note about some concepts in javascript.
 ![--](../assets/img/utils/rainbow.png)
 
 ## Table of Contents
@@ -19,72 +19,10 @@ This post is my learning note about some concept in javascript.
 
 ## Data type
 There are two kinds of data:
-- **Primative** (e.g: string, number, boolean, undefined, null).
+- **Primative** (e.g.: string, number, boolean, undefined, null).
   - number: combine int, long, double. 
   - undefined + null: 
     ![image](../assets/img/javascript/basic/null-undefined.png)
-- **Objects** (e.g: document & friend).
+- **Objects** (e.g.: document & friend).
 
 ![--](../assets/img/utils/rainbow.png)
-
-<!-- ## Supervised learning
-
-Supervised learning is used when we have a labeled dataset and want to predict the label of new, unseen data points. Some common supervised learning algorithms include:
-
-- Linear regression
-- Logistic regression
-- Decision trees
-- Random forests
-- Support vector machines
-
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
-## Unsupervised learning
-
-Unsupervised learning is used when we have an unlabeled dataset and want to find patterns or structure within the data. Some common unsupervised learning algorithms include:
-
-- K-means clustering
-- Hierarchical clustering
-- Principal component analysis (PCA)
-- Singular value decomposition (SVD)
-
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
-## Reinforcement learning
-
-Reinforcement learning is used when an algorithm needs to learn by trial and error. The algorithm interacts with an environment and receives rewards or punishments based on its actions. Some common reinforcement learning algorithms include:
-
-- Q-learning
-- Deep reinforcement learning
-- Policy gradients
-
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
-## Common algorithms
-
-Here are some of the most commonly used machine learning algorithms:
-
-| Algorithm | Type | Description |
-|-----------|------|-------------|
-| Linear regression | Supervised learning | Fits a linear equation to the data |
-| Logistic regression | Supervised learning | Predicts the probability of a binary outcome |
-| K-means clustering | Unsupervised learning | Divides data into clusters based on similarity |
-| Decision trees | Supervised learning | Builds a tree to make predictions based on if-then rules |
-| Random forests | Supervised learning | Builds multiple decision trees and combines their predictions |
-| Support vector machines | Supervised learning | Finds a hyperplane that separates data into classes |
-
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
-## Evaluation metrics
-
-When evaluating a machine learning model, we need to use metrics that reflect how well the model is performing. Some common evaluation metrics include:
-
-- **Accuracy:** The percentage of correctly predicted data points.
-- **Precision:** The percentage of true positives among all predicted positives.
-- **Recall:** The percentage of true positives among all actual positives.
-- **F1 score:** A combination of precision and recall.
-
-![-----------------------------------------------------](https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/rainbow.png)
-
-## Resource
-1. [MDN](https://developer.mozilla.org/en-US/) -->
