--- a/_posts/2023-06-20-CS50.md
+++ b/_posts/2023-06-20-CS50.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: CS50  
-subtitle: Path 1 - Docker
+subtitle: Self reflection
 cover-img: assets/img/cs50/background.png
 thumbnail-img: assets/img/cs50/background.png
 share-img: assets/img/cs50/background.png
@@ -14,11 +14,11 @@ tags: [cs50]
 - [Table of Contents](#table-of-contents)
 - [Dive Into Docker](#dive-into-docker)
 - [Docker Run in Detail](#docker-run-in-detail)
-  - [Comand](#comand)
+  - [Command](#comand)
   - [Note](#note)
 - [Building Custom Images](#building-custom-images)
-  - [Create a dockerfile](#create-a-dockerfile)
-  - [Structure of dockerfile](#structure-of-dockerfile)
+  - [Create a docker file](#create-a-dockerfile)
+  - [Structure of docker file](#structure-of-dockerfile)
   - [Note](#note-1)
 
 ![--](../assets/img/utils/rainbow.png)
