--- a/_posts/2023-06-20-CS50.md
+++ b/_posts/2023-06-20-CS50.md
@@ -1,27 +1,33 @@
 ---
 layout: post
 title: CS50  
-subtitle: Self reflection
+subtitle: Just Basic
 cover-img: assets/img/cs50/background.png
 thumbnail-img: assets/img/cs50/background.png
 share-img: assets/img/cs50/background.png
-tags: [cs50]
+tags: [foundation]
 ---
 
 ![--](../assets/img/utils/rainbow.png)
 
 ## Table of Contents
-- [Table of Contents](#table-of-contents)
-- [Dive Into Docker](#dive-into-docker)
-- [Docker Run in Detail](#docker-run-in-detail)
-  - [Command](#comand)
-  - [Note](#note)
-- [Building Custom Images](#building-custom-images)
-  - [Create a docker file](#create-a-dockerfile)
-  - [Structure of docker file](#structure-of-dockerfile)
-  - [Note](#note-1)
+- [Week 0 - Scratch](#week-0---scratch)
+- [Week 1 - C](#week-1---c)
 
 ![--](../assets/img/utils/rainbow.png)
 
 ## Week 0 - Scratch
-temp
+
+- *Binary digits:* known as BIT, computer use binary
+- *Byte:* 8 BITs 
+- *Letter:*  
+    - ASCII 8 BITS for 1 character 
+    - UNICODE 32 BITS for 1 character
+- *RGB*       
+- *Algorithm*
+- *Pseudocode*     
+- *Scratch*
+
+![--](../assets/img/utils/rainbow.png)
+
+# Week 1 - C
