--- a/_posts/20223-05-01-Java-101.md
+++ b/_posts/20223-05-01-Java-101.md
@@ -8,13 +8,14 @@ share-img: assets/img/java/background.png
 tags: [java]
 ---
 
-This post is my learning note about some basic concept in java. 
+This post is my learning note about some basic concepts in JAVA. 
 ![--](../assets/img/utils/rainbow.png)
 
 ## Table of Contents
 - [Table of Contents](#table-of-contents)
 - [Data Type](#data-type)
 - [Resource](#resource)
+- [Control Flow](#control-flow)
 
 ![--](../assets/img/utils/rainbow.png)
 
@@ -29,6 +30,38 @@ This post is my learning note about some basic concept in java.
 | String | Built-in Classes | immutable, but `StringBuilder` class is mutable |
 
 ![--](../assets/img/utils/rainbow.png)
+
+## Control Flow
+- *Switch case*
+- *Loop:* for, while, do while, (continue, break keywork) 
+
+![--](../assets/img/utils/rainbow.png)
+
+## OOP basic concept
+- *Class* 
+- *Object* 
+- *Static vs Instance:* 
+    - Static: stores in memory when compiling JAVA code to bytecode. 
+    - Instance: not allocated any memory until objects are created.
+- *Access modifiers:*
+    - Public
+    - Protected: allow access to the same package.
+    - Private: Other classes can not access.
+- *Get & Set:*
+    - Set: set values to private field. (Allow data validation when set field)
+    - Get: get values of a private field.
+- *Constructor:* 
+    - Default constructor: the same name as the class name and start with `public` keyword
+    - Constructor chaining: The constructor calls another overloaded constructor using `this` keyword
+    - Don't use any function in constructor, except chaining constructor
+- *POJO:*Can be called bean, JavaBean, Entity, DTO
+- *Special keyword:*
+    - this: can be used to describe itself, to access fields on the class
+    - Record: new type in Java to store data, different than POJO as a class. Further reading](https://www.google.com/search?q=pojo+vs+record&oq=POJO+vs+record&aqs=edge.0.0i512j0i390i650l3.7709j0j1&sourceid=chrome&ie=UTF-8)
+
+![--](../assets/img/utils/rainbow.png)
+
+## Inheritance 
 
 
 ## Resource
