--- a/_posts/2023-06-20-CS50.md
+++ b/_posts/2023-06-20-CS50.md
@@ -31,3 +31,8 @@ tags: [foundation]
 ![--](../assets/img/utils/rainbow.png)
 
 # Week 1 - C
+
+- *Machine code:* source code -> compiler -> machine code
+- *Linux:* basic command  
+- *Function*
+- *Overflow:* over the limit BITs
